[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["Anna Dvoskina <anna.dvoskina@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.19.0"
wikipedia = "^1.4.0"
beautifulsoup4 = "^4.10.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
